# hermes-zello-plugin

./: .env.example  .gitignore  DELTAS.md  HERMES-ZELLO-PLAN.md  README.md  SETUP.md  flake.nix  plugin.yaml  pyproject.toml
hermes_zello_plugin/: __init__.py  adapter.py  aggregator.py  allowlist.py  config.py  outbound.py  platform_hint.py
scripts/: echo_bot.py  live_outbound.py  live_smoke.py
tests/: conftest.py  test_aggregator.py  test_config_env.py  test_outbound_pacing.py  test_smoke.py
