[project]
name = "hermes-zello-plugin"
version = "0.1.0"
description = "Zello Channel API platform plugin for Hermes Agent"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Roberto Abdelkader Martínez Pérez", email = "robertomartinezp@gmail.com" },
]
dependencies = [
    "aiozello",
    "opuslib>=3.0.1",
    "aiohttp>=3.9",
    "pyjwt[crypto]>=2.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.uv.sources]
aiozello = { git = "https://github.com/nilp0inter/aiozello", rev = "c79fca8adc1dc4b3426e62898e83d2c71bd38d61" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hermes_zello_plugin"]

[tool.hatch.metadata]
allow-direct-references = true
